<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="322dp"
        android:layout_height="274dp"
        android:alpha="0.8"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:backgroundTint="#2C2525"
        android:fontFamily="@font/irish"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="227dp"
        android:layout_height="47dp"
        android:height="48dp"
        android:autofillHints="passwordField"
        android:backgroundTint="#0BC127"
        android:ems="10"
        android:fontFamily="@font/irish"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.82" />

    <EditText
        android:id="@+id/userField"
        android:layout_width="227dp"
        android:layout_height="47dp"
        android:alpha="6"
        android:autofillHints="userField"
        android:backgroundTint="#0BC127"
        android:fontFamily="@font/irish"
        android:hint="@string/usuarioField"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>